# stack

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  mystack.cpp  mystack.h  stack.cpp  stack.h
include/: mystack.hpp  stack.hpp
src/: main.cpp
